--- a/src/_includes/components/webmentions.njk
+++ b/src/_includes/components/webmentions.njk
@@ -40,7 +40,11 @@ or
 {% if citationSize > 0 %}
   <details class="mention">
    <summary> <h3 > {{ citationSize }} citation{% if citationSize > 1 %}s{% endif %} </h3></summary> 
+   
+   {% set myvar %} 
     {% include "components/webmentions/citedby.njk" %}
+  {% endset %}
+  {% addAutoref  myvar, bibM  %}
   </details>
 {% endif %}
 
