--- a/src/_includes/components/webmentions/citedby.njk
+++ b/src/_includes/components/webmentions/citedby.njk
@@ -4,7 +4,7 @@
 
  <ol class="citedBy">
 {% for article in gsentry.citing%}
- <li >
+ <li class="citedbyitem">
  
 
 {% for auth in article.authorsid%}
