--- a/src/publications/articles/2014-BSQ-Tissues-Collagen-Time/index.njk
+++ b/src/publications/articles/2014-BSQ-Tissues-Collagen-Time/index.njk
@@ -4,7 +4,7 @@ illust: pone.0093325.g006.png
 ---
 <p class="titleHead" id="from-single-cells-to-tissues-interactions-between-the-matrix-and-human-breast-cells-in-real-time">From Single Cells to Tissues: Interactions between the Matrix and Human Breast Cells in Real Time</p>
 <p class="center indent authors">
-  Clifford Barnes, Lucia Speroni, Kyle P. Quinn, Mael Montevil, Kurt Saetzler, Gbemisola Bode-Animashaun, George McKerr, Irene Georgakoudi, C. Stephen Downes, Carlos Sonnenschein, C. Vyvyan Howard, Ana M. Soto
+  Clifford Barnes, Lucia Speroni, Kyle P. Quinn, Maël Montévil, Kurt Saetzler, Gbemisola Bode-Animashaun, George McKerr, Irene Georgakoudi, C. Stephen Downes, Carlos Sonnenschein, C. Vyvyan Howard, Ana M. Soto
 </p>
 <h3 class="abstract">Abstract</h3>
 
