--- a/src/publications/articles/2016-MML-Theoretical-Principles-Organization/index.njk
+++ b/src/publications/articles/2016-MML-Theoretical-Principles-Organization/index.njk
@@ -571,7 +571,7 @@ realizes closure, and is therefore organized.</span></p>
   state <em>of</em> organized systems. Accordingly, the default state enriches organization by making explicit some of its most biologically relevant features and, reciprocally, organization grounds the default state by specifying the
   relevant class of natural systems to which it applies. On the other hand, the constraints constituting the organization certainly play a central role in explaining the observed departures from the default state. Under the effect of
   organized constraints, exerted both within their individual organization and by the multicellular organization of which they can be a part, cells can exhibit different degrees in their capacity to proliferate with variation and move, up
-  to the extreme cases of proliferative quiescence, lack of variation or lack of movement. In a word, organized constraints control the default state, and the default state helps in the understanding of the nature of biological functions<a class="footnote-ref" href="#fn22" id="fnref22" role="doc-noteref"><sup>[22]</sup></a>. These theoretical considerations were used to model organogenesis on the bases of the default state and organizational closure (see Montevil et al,
+  to the extreme cases of proliferative quiescence, lack of variation or lack of movement. In a word, organized constraints control the default state, and the default state helps in the understanding of the nature of biological functions<a class="footnote-ref" href="#fn22" id="fnref22" role="doc-noteref"><sup>[22]</sup></a>. These theoretical considerations were used to model organogenesis on the bases of the default state and organizational closure (see Montévil et al,
   2016).
 </p>
 <p class="indent">
@@ -633,8 +633,8 @@ doi: <a href="https://doi.org/10.1155/2015/863075">10.1155/2015/863075</a></li>
 <li class="bibitem">Longo, G., Miquel, P.A., Sonnenschein, C., Soto, A. (2012a). Is Information a proper observable for biological organization? <em>Progress in Biophysics and Molecular Biology</em>, 109, 3, 108-114.</li>
 <li class="bibitem">G. Longo and M. Montévil. 2011. “From physics to biology by extending criticality and symmetry breakings.” Systems Biology and Cancer, <em>Progress in Biophysics and Molecular Biology</em> 106 (2): 340–347.issn: 0079-6107.
 doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2011.03.005">10.1016/j.pbiomolbio.2011.03.005</a></li>
-<li class="bibitem">Longo, G. Montevil, M., Kauffman, S. (2012b). No entailing laws, but enablement in the evolution of the biosphere. <em>Companion Volume of the 14th Genetic and Evolutionary Computation Conference (GECCO)</em>, 1379–1391.</li>
-<li class="bibitem">Longo, G., Montevil, M. (2014). <em>Perspectives on organisms: biological time, symmetries and singularities</em>. Heidelberg: Springer.</li>
+<li class="bibitem">Longo, G. Montévil, M., Kauffman, S. (2012b). No entailing laws, but enablement in the evolution of the biosphere. <em>Companion Volume of the 14th Genetic and Evolutionary Computation Conference (GECCO)</em>, 1379–1391.</li>
+<li class="bibitem">Longo, G., Montévil, M. (2014). <em>Perspectives on organisms: biological time, symmetries and singularities</em>. Heidelberg: Springer.</li>
 <li class="bibitem">Longo G., Montévil M., Sonnenschein C., Soto A. (2015). In Search of Principles for a Theory of Organisms. <em>Journal of Biosciences</em>, 40, 5, 955-68</li>
 <li class="bibitem">
   Longo, G. &amp; Soto, A.M., Why do we need theories? (2016, this issue). <em>Progress in Biophysics and Molecular Biology</em>, Available online 4 July 2016, ISSN 0079-6107,
