--- a/src/publications/articles/2016-SLM-Theoretical-Principle-Default-State/index.njk
+++ b/src/publications/articles/2016-SLM-Theoretical-Principle-Default-State/index.njk
@@ -440,7 +440,7 @@ proliferative quiescence, lack of variation, and lack of movement require an exp
       <p class="indent">
         Theoretical symmetries are transformations that do not change the intended aspect of an object (or mathematically of an equation). For example, the equation of classical gravitation does not depend on the time or location of
         the objects considered, only their mass and relative distance matter. Theoretical symmetries have a fundamental role in physics making possible its formalization by using mathematical tools and concepts (van Fraassen 1989;
-        Bailly and Longo 2011; Montevil et al. this issue).<a class="footnote-back" href="#fnref4">↩</a>
+        Bailly and Longo 2011; Montévil et al. this issue).<a class="footnote-back" href="#fnref4">↩</a>
       </p>
     </li>
     <li id="fn5">
