--- a/src/publications/articles/2017-MP-Hitchhikers-Guide-Cancer/index.njk
+++ b/src/publications/articles/2017-MP-Hitchhikers-Guide-Cancer/index.njk
@@ -500,7 +500,7 @@ as that of inducing gene expression, which cannot be predicted from our knowledg
 <dl class="indent">
   <dt class="dt"><span class="small-caps">Toft</span>:</dt>
   <dd class="dd">
-    see the special issue in <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>: “From the century of the genome to the century of the organism: New theoretical approaches”<span class="Footnote_20_anchor" title="Footnote:  These are Soto, Longo and Noble (2016); Soto, Longo, Montévil and Sonnenschein (2016); Soto, Longo, Miquel, Montevil, Mossio, Perret, Pocheville and Sonnenschein (2016); Sonnenschein and Soto (2016); Perret and Longo (2016); Mossio, Montévil and Longo (2016); Montévil, Speroni, Sonnenschein and Soto (2016); Montévil, Mossio, Pocheville and Longo (2016); Miquel and Hwang (2016); Longo and Soto (2016)."><a href="#ftn14" id="body_ftn14">[14]</a></span> dedicated to the development of a theory of organism, a more general framework in which <span class="small-caps">toft</span> takes place and to which we contributed. (This was released in October 2016, but authors of the special
+    see the special issue in <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>: “From the century of the genome to the century of the organism: New theoretical approaches”<span class="Footnote_20_anchor" title="Footnote:  These are Soto, Longo and Noble (2016); Soto, Longo, Montévil and Sonnenschein (2016); Soto, Longo, Miquel, Montévil, Mossio, Perret, Pocheville and Sonnenschein (2016); Sonnenschein and Soto (2016); Perret and Longo (2016); Mossio, Montévil and Longo (2016); Montévil, Speroni, Sonnenschein and Soto (2016); Montévil, Mossio, Pocheville and Longo (2016); Miquel and Hwang (2016); Longo and Soto (2016)."><a href="#ftn14" id="body_ftn14">[14]</a></span> dedicated to the development of a theory of organism, a more general framework in which <span class="small-caps">toft</span> takes place and to which we contributed. (This was released in October 2016, but authors of the special
     issue would have happily shared preprints had the critics deemed desirable to contact them.) For the criticisms of the vocabulary of <span class="small-caps">smt</span> see e.g. Sonnenschein and Soto (2011); Longo et al. (2012).
     While we would depart from some of her theses see also the book by Bertolaso (2016).
   </dd>
@@ -588,7 +588,7 @@ as that of inducing gene expression, which cannot be predicted from our knowledg
   Biology 122(1):16–23.
 </li>
 <li class="bibitem">
-  Soto, A. M., G. Longo, P.-A. Miquel, M. Montevil, M. Mossio, N. Perret, A. Pocheville and C. Sonnenschein. 2016. “Toward a theory of organisms: Three founding principles in search of a useful integration.” Progress in Biophysics and
+  Soto, A. M., G. Longo, P.-A. Miquel, M. Montévil, M. Mossio, N. Perret, A. Pocheville and C. Sonnenschein. 2016. “Toward a theory of organisms: Three founding principles in search of a useful integration.” Progress in Biophysics and
   Molecular Biology.
 </li>
 <li class="bibitem">Soto, A. M., M. V. Maffini and Carlos Sonnenschein. 2007. “Neoplasia as development gone awry: the role of endocrine disruptors.” Int J Androl 31(2):288.</li>
@@ -654,7 +654,7 @@ Rondoni and Vulpiani (2014), Bitbol (2012), Longo, Montévil and Pocheville (201
   <p class="indent"><span class="footnodeNumber"><a class="Footnote_20_Symbol" href="#body_ftn13" id="ftn13">13</a></span>We cite him here as Kim (1998).</p>
   <p class="indent">
     <span class="footnodeNumber"><a class="Footnote_20_Symbol" href="#body_ftn14" id="ftn14">14</a></span>These are Soto, Longo and Noble (2016); Soto, Longo, Montévil and
-    Sonnenschein (2016); Soto, Longo, Miquel, Montevil, Mossio, Perret, Pocheville and Sonnenschein (2016); Sonnenschein and Soto (2016); Perret and Longo (2016); Mossio, Montévil and Longo (2016); Montévil, Speroni, Sonnenschein and Soto
+    Sonnenschein (2016); Soto, Longo, Miquel, Montévil, Mossio, Perret, Pocheville and Sonnenschein (2016); Sonnenschein and Soto (2016); Perret and Longo (2016); Mossio, Montévil and Longo (2016); Montévil, Speroni, Sonnenschein and Soto
     (2016); Montévil, Mossio, Pocheville and Longo (2016); Miquel and Hwang (2016); Longo and Soto (2016).
   </p>
 </div>
