--- a/src/publications/articles/2021-Montevil-Entropies-Anthropocene/index.njk
+++ b/src/publications/articles/2021-Montevil-Entropies-Anthropocene/index.njk
@@ -2651,7 +2651,7 @@ class="ectt-1095">10.1007/s10699-017-9535</span>
   <span 
 class="ectt-1095">-x</span></a>.
   </li>
-  <li class="bibitem" id="Xlomososo2015">Longo,    G.,    Montevil,    M.,    Sonnenschein,    C.,    and    Soto,    A.M.    (Dec
+  <li class="bibitem" id="Xlomososo2015">Longo,    G.,    Montévil,    M.,    Sonnenschein,    C.,    and    Soto,    A.M.    (Dec
   2015).      In   search   of   principles   for   a   theory   of   organisms.      <span 
 class="cmti-10">Journal  of</span>
   <span 
