--- a/src/publications/articles/2022-Montevil-identite-begining-philosophy/index.njk
+++ b/src/publications/articles/2022-Montevil-identite-begining-philosophy/index.njk
@@ -137,7 +137,7 @@ articulés.
                                                                                
                                                                                
    </figure>
-<!-- l. 135 --><p class='indent'>   L'immunologie est dans cette situation d'insuffisance théorique <a href='#X2021-Montevil-vaccines-germs-knowledge'>Montevil</a> [<a href='#X2021-Montevil-vaccines-germs-knowledge'>2021b</a>] es concepts de
+<!-- l. 135 --><p class='indent'>   L'immunologie est dans cette situation d'insuffisance théorique <a href='#X2021-Montevil-vaccines-germs-knowledge'>Montévil</a> [<a href='#X2021-Montevil-vaccines-germs-knowledge'>2021b</a>] es concepts de
 soi et de non-soi sont des concepts mort-vivants, issus notamment de techniques particulières comme
 la vaccination ou la greffe, et d'une théorisation par Burnet appelée théorie de la section clonale
 <a href='#Xburnet1957modification'>Burnet et al.</a> [<a href='#Xburnet1957modification'>1957</a>]. Ce cadre pose que l'immunité acquise provient 1) de la production de
@@ -390,14 +390,14 @@ sciences que pour la philosophie.
   Bloomsbury Publishing, 2018.
   </p>
   <p class='bibitem'><span class='biblabel'>
-<a id='X2021-Montevil-episteme-computational-empiricism'></a><span class='bibsp'>   </span></span>M. Montevil.                                        Computational              empiricism              :
+<a id='X2021-Montevil-episteme-computational-empiricism'></a><span class='bibsp'>   </span></span>M. Montévil.                                        Computational              empiricism              :
   the reigning épistémè of the sciences.  <span class='ecti-1000'>Philosophy World Democracy</span>, July 2021a.  URL
   <a class='url' href='https://www.philosophy-world-democracy.org/computational-empiricism'><span class='ectt-1000'>https://www.philosophy-world-democracy.org/computational-empiricism</span></a>.
                                                                                
                                                                                
   </p>
   <p class='bibitem'><span class='biblabel'>
-<a id='X2021-Montevil-vaccines-germs-knowledge'></a><span class='bibsp'>   </span></span>M. Montevil. Vaccines, germs, and knowledge. <span class='ecti-1000'>Philosophy World Democracy</span>, April 2021b.
+<a id='X2021-Montevil-vaccines-germs-knowledge'></a><span class='bibsp'>   </span></span>M. Montévil. Vaccines, germs, and knowledge. <span class='ecti-1000'>Philosophy World Democracy</span>, April 2021b.
   URL <a class='url' href='https://www.philosophy-world-democracy.org/vaccines-germs-and-knowledge'><span class='ectt-1000'>https://www.philosophy-world-democracy.org/vaccines-germs-and-knowledge</span></a>.
   </p>
   <p class='bibitem'><span class='biblabel'>
