--- a/src/publications/articles/2022-Montevil-uncomputable-living-computers/index.njk
+++ b/src/publications/articles/2022-Montevil-uncomputable-living-computers/index.njk
@@ -581,7 +581,7 @@ engineers.
                                                                             
                                                                             
      </li>
-  <li class='bibitem' id='cite.0@chapterccl' >  Soto, A. M., G. Longo, P.-A. Miquel, M. Montevil, M. Mossio, N. Perret, A. Pocheville,
+  <li class='bibitem' id='cite.0@chapterccl' >  Soto, A. M., G. Longo, P.-A. Miquel, M. Montévil, M. Mossio, N. Perret, A. Pocheville,
     and C. Sonnenschein. 2016. “Toward a theory of organisms: Three founding principles
     in search of a useful integration.” <span class='ecti-1000'>Progress in Biophysics and Molecular Biology </span>122, no.
     1 (August): 77–82. <span class='small-caps'>issn</span> : 0079-6107. <a class='url' href='https://doi.org/10.1016/j.pbiomolbio.2016.07.006'>https://doi.org/10.1016/j.pbiomolbio.2016.07.006</a>.
