--- a/src/publications/articles/submitted-Montevil-Disruption-Phenology/index.njk
+++ b/src/publications/articles/submitted-Montevil-Disruption-Phenology/index.njk
@@ -2,4 +2,11 @@
 hasPDF: false
 hasFullText: false
 date: 2021-04-16
+tags: 
+    - disruption
+    - plant
+    - pollinator
+    - ecology 
+    - anti-entropy
+    - entropy
 ---
