--- a/src/talks/bib-based.njk
+++ b/src/talks/bib-based.njk
@@ -75,7 +75,7 @@ eleventyComputed: {
 {{ entry.id  | includeifex| markdownify | safe}}
 </div>
 {% if video %}
-<h2 id="video">Video</h2>
+<h2 id="video1">Video</h2>
 <div>
 {% from "macros/videoEmbed.njk" import videoEmbed %}
 {{videoEmbed(video) | safe }}
