--- a/src/publications/varia/2018-MAS-NtpClarityBpa/index.njk
+++ b/src/publications/varia/2018-MAS-NtpClarityBpa/index.njk
@@ -5,8 +5,8 @@ hasFullText: false
 typepub: data
 tags: 
     - morphometry
-    - rat
-    - mammary gland
+    - rats
+    - mammary glands
     - endocrine disruptors
 seeAlso: 
     grub: "articles/2020-MAS-Morphometric-Clarity-Bpa"
