--- a/src/publications/articles/2025-Montevil-Disruption-Phenology/index.njk
+++ b/src/publications/articles/2025-Montevil-Disruption-Phenology/index.njk
@@ -1629,9 +1629,7 @@ and iterate the estimation 400 times.
 </p>
    <h3 class='likesectionHead' id='references'><a id='x1-42000'></a>References</h3>
                                                                                
-                                                                               
-<!-- l. 1 --><p class='noindent'>
-  </p><div class='thebibliography'>
+   <div class='thebibliography'>
   <p class='bibitem'><span class='biblabel'>
 <a id='XARNOLDI201647'></a><span class='bibsp'>   </span></span>Arnoldi,  J.-F.,  Loreau,  M.,  &amp;  Haegeman,  B.  (2016).   Resilience,  reactivity  and
   variability: A mathematical comparison of ecological stability measures.  <span class='cmti-10x-x-109'>Journal of
