--- a/assets/sass/components/_pubtext.scss
+++ b/assets/sass/components/_pubtext.scss
@@ -147,7 +147,7 @@ dt.description {
 .small-caps {
   font-variant: small-caps;
 }
-.cmti-10, .ecti-1000 {
+.cmti-10, .ecti-1000,.cmti-10x-x-109 {
   font-style: italic;
 }
 
