--- a/src/index.njk
+++ b/src/index.njk
@@ -57,7 +57,7 @@ JSON-LD for:
   I am a researcher (Chargé de recherche) in 
   <a class="p-org h-card" href="http://www.cnrs.fr/"> CNRS</a>, working in 
     <a class="p-org h-card" href="https://republique-des-savoirs.fr/equipes/centre-cavailles/"> Centre Cavaillès</a>
-  <a class="p-org h-card" href="https://republique-des-savoirs.fr/"> République des Savoirs UAR 3608</a>,   <a class="p-org h-card" href="https://www.ens.fr/"> École Normale Supérieure</a>.
+  <a class="p-org h-card" href="https://republique-des-savoirs.fr/"> République des Savoirs UMR 8241</a>,   <a class="p-org h-card" href="https://www.ens.fr/"> École Normale Supérieure</a>.
 
 
  
