--- a/src/publications/articles/2025-MSBCS-Quantitative-Endocrine-Disruption/index.njk
+++ b/src/publications/articles/2025-MSBCS-Quantitative-Endocrine-Disruption/index.njk
@@ -3,8 +3,7 @@ illust: 1-s2.0-S0890623825001005-gr2.jpg
 hasPDF: true
 hasFullText: true
 date: 2025-04-06
-excerpt: "Below is a podcast and transcript of the interview concerning the
-1st chapter of the book Bifurquer"
+excerpt: "we look into the effect of endocrine disruptors on rat mammary glands"
 tags: 
     - disruption
     - endocrine disruptors
