--- a/src/_layouts/archives.njk
+++ b/src/_layouts/archives.njk
@@ -49,7 +49,7 @@ css: ["page-archives.css"]
 </aside>
 #}
 
-
+<!-- htmlmin:ignore -->
 <link rel="preload" href="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.css"></noscript>
 
@@ -113,6 +113,7 @@ li.aa-Item div.aa-ItemDescription{color: var(--color-primary-darker-1);}
 </style>
 
 <div id="search" class="wrap" style="height:32px;"> </div> 
+<!-- htmlmin:ignore -->
 </header>
       
         <ol class="cards-list">
