--- a/src/_layouts/content.njk
+++ b/src/_layouts/content.njk
@@ -121,6 +121,7 @@ hasSup: hasSup,
       datepub:datepub,
       allMentionsSize:allMentionsSize,
       peerReview: peerReview,
+            video: video,
          auteurs: auteurs,
           type: type,
       typepub: typepub,
