Restoring old source code

--- a/src/_includes/archiveTOC.njk
+++ b/src/_includes/archiveTOC.njk
@@ -82,7 +82,7 @@
                 {%- endfor %}
               </ul>
             <p class=""><a href="/publications/publicationsbyYear/">Complete Publication list by year</a></p>       
-            
+            <p class=""><a class="center" href="{% link_to "map" %}"> Thematic map of  publications</a></p>
           </div>
      {#   {% endblock %}#}
      
