--- a/src/publications/publicationsbyYear.njk
+++ b/src/publications/publicationsbyYear.njk
@@ -6,7 +6,7 @@ tocOver: tocCenter2
 ---
    {% from "macros/colByYear.njk" import colByYear %}
    <p class=" wrap center">See also the <a class=" " href="/publications/publicationsbyType/">complete Publication list by category</a></p>
-   
+   <p class="center">or a <a class="" href="{% link_to "map" %}">thematic map of  publications</a></p>
        <hr class=" wrap ">
 
 {{ colByYear(collections.publicationsall) |safe}}
